# agent-company

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  README_zh.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
configs/: agents.yaml  models.yaml  values.yaml
examples/: custom_company.py  full_tender_demo.py  live_demo.py  marketplace_demo.py  quickstart.py
marketplace/community/: data-analyst.agent.yaml  python-coder.agent.yaml  writer-zh.agent.yaml
notebooks/: interactive_demo.ipynb
templates/: consulting-company.yaml  design-company.yaml  education-company.yaml  finance-company.yaml  publishing-company.yaml  software-company.yaml
