[project]
name = "agent-company"
version = "0.2.0"
description = "招标制 AI Agent 公司框架 — 用 AI Agent 组建虚拟公司，自动招标、绩效考核、末位淘汰"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [
    {name = "Agent Company Contributors"},
]
keywords = ["ai", "agent", "multi-agent", "company", "framework"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.urls]
Homepage = "https://github.com/agent-company/agent-company"
Documentation = "https://agent-company.github.io"
Repository = "https://github.com/agent-company/agent-company"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
